# ads

./: .env.advanced.example  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE_GUIDE.md  ads-client.ts  alembic.ini  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  services.sh  telegram-bot.sh  tsconfig.json
.Jules/: palette.md
.agent/skills/: metadata.yaml
.githooks/: pre-commit  pre-push
.github/workflows/: pre-release.yml
.jules/: bolt.md  palette.md  sentinel.md
ads/cli/: __init__.py  init.py  main.py  setup.py  slash.py
ads/commands/: __init__.py  executor.py  loader.py
ads/graph/: __init__.py  aggregate_helper.py  auto_workflow.py  config.yaml  crud.py  edge_types.py  exceptions.py  file_manager.py  finalize_helper.py  models.py  schemas.py  workflow_config.py
ads/mcp/: DESIGN.md  README.md  __init__.py  server.py
ads/plugins/: __init__.py  interface.py  loader.py  registry.py
ads/storage/: base.py  database.py
ads/templates/: __init__.py  loader.py  renderer.py  rules.md
ads/tests/: test_auto_workflow.py  test_cli.py  test_commands.py  test_graph.py  test_graph_edge_cases.py  test_plugins.py  test_schemas.py  test_storage.py  test_templates.py  test_workflow_config.py  test_workspace.py
ads/workspace/: __init__.py  context.py  detector.py
client/: vite.config.ts  vitest.config.ts
client/src/: App.css  App.vue  global.css  main.ts
docs/: ARCHITECTURE_NEW.md  CODE_REVIEW_REMEDIATION.md  HOW_TO_INSTALL_GLOBALLY.md  HOW_TO_USE_WITH_CLAUDE_CODE.md  HOW_TO_USE_WITH_CODEX.md  NEW_TESTS_CHECKLIST.md  PLUGIN_SYSTEM_DESIGN.md  REFACTOR.md  SLASH_COMMANDS_GUIDE.md  TEST_SUMMARY.md  WORKSPACE_SETUP.md  claude-integration-plan.md
docs/adr/: 0001-adopt-documentation-strategy.md  0001-ads-core-architecture.md  0002-auto-adr-recording-explicit-block.md  0003-gate-task-chat-until-execution-starts.md  0004-order-task-prompt-and-placeholder.md  0005-chat-message-timestamps-and-mobile-login-keyboard.md  0006-collapse-command-tree-and-stack-execute-previews.md  0007-queue-task-runs-while-agent-busy.md  0008-task-rerun-with-workspace-patch-context.md  0009-constrain-live-step-trace-output.md  0010-codex-error-classification-and-ws-errorinfo.md  0011-mobile-ui-project-list-and-topbar.md  0012-task-createform-voice-icon-position.md  0013-execute-stack-underlay-headers-and-live-step-autoscroll.md  0014-per-project-keyed-locks-for-parallelism.md  0015-web-chat-simplify-command-ui-and-fold-live-step.md  0016-web-dual-chat-planner-worker.md  README.md  (+2 more)
scripts/: bundle.js  chmod-bins.js  copy-runtime-assets.js  copy-templates.js  debug-history.mjs  dev-console.sh  install-codex-prompts.js  install_codex_prompts.sh  services.sh
server/: cli.ts  codexConfig.ts  config.ts
src/: ads.ts  codexConfig.ts  codexPing.ts  index.ts  server.ts  types.ts
templates/: instructions.md  rules.md  supervisor.md  task.md  workflow.yaml
tests/: config.test.ts
web/: index.html  vite.config.ts  vitest.config.ts
(+1314 files in other folders)
