[project]
name = "ads"
version = "0.1.0"
description = "ADS - AI-Driven Specification"
authors = [
    {name = "Andy963", email = "Andy963@users.noreply.github.com"},
]
dependencies = [
    "pydantic>=2.11.9",
    "typer>=0.9,<0.16",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.5",
    "pyyaml>=6.0.3",
    "mcp>=1.17.0",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ads = "ads.cli.main:main"
"ads.new" = "ads.cli.slash:new_main"
"ads.status" = "ads.cli.slash:status_main"
"ads.add" = "ads.cli.slash:add_main"
"ads.commit" = "ads.cli.slash:commit_main"
"ads.checkout" = "ads.cli.slash:checkout_main"
"ads.branch" = "ads.cli.slash:branch_main"
"ads.log" = "ads.cli.slash:log_main"
"ads.get" = "ads.cli.slash:get_main"
"ads.commands" = "ads.cli.slash:commands_main"
"ads.run" = "ads.cli.slash:run_main"

[tool.pdm.scripts]
mcp = "python -m ads.mcp.server"

[tool.pdm]
distribution = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ads*"]

[tool.setuptools.package-data]
ads = [
    "templates/**/*.md",
    "templates/**/*.yaml",
    "commands/**/*.md"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
